feat - create desktop wrapper + setup CI