@@ -20,19 +20,3 @@ MAVEN_OPTS="--enable-preview" ./mvnw package
 It produces the `collektor-1.0.0-SNAPSHOT-runner.jar` file in the `/target` directory.
 
 The application is now runnable using `java -jar target/collektor-1.0.0-SNAPSHOT-runner.jar`.
-
-## Creating a native executable
-
-You can create a native executable using: 
-```shell script
-MAVEN_OPTS="--enable-preview" ./mvnw package -Pnative
-```
-
-Or, if you don't have GraalVM installed, you can run the native executable build in a container using: 
-```shell script
-./mvnw package -Pnative -Dquarkus.native.container-build=true
-```
-
-You can then execute your native executable with: `./target/collektor-1.0.0-SNAPSHOT-runner`
-
-If you want to learn more about building native executables, please consult https://quarkus.io/guides/maven-tooling.html.
